refactor: avoid use jdk api upper jdk11 (#905)